--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.4.1",
     "@nuxtjs/style-resources": "^0.1.2",
-    "bootstrap-vue": "^2.0.0-rc.18",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.19",
     "chart.js": "^2.7.1",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
@@ -22,6 +23,7 @@
     "font-awesome": "^4.7.0",
     "nuxt": "^2.6.2",
     "simple-line-icons": "^2.4.1",
+    "vue": "^2.6.10",
     "vue-chartjs": "^3.1.1"
   },
   "devDependencies": {
