--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nuxt": "^2.6.2",
     "nuxt-webfontloader": "^1.0.0",
     "themify-icons": "^1.0.0",
+    "uuid": "^3.3.2",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.1.1"
   },
