--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "themify-icons": "^1.0.0",
     "uuid": "^3.3.2",
     "vue": "^2.6.10",
-    "vue-chartjs": "^3.1.1"
+    "vue-chartjs": "^3.1.1",
+    "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
     "node-sass": "^4.7.2",
