--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
     "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
-    "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6",
-    "nodemon": "^1.11.0",
     "babel-eslint": "^8.2.1",
     "eslint": "^4.15.0",
+    "eslint-config-prettier": "^6.0.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^2.0.0",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-vue": "^4.0.0",
+    "node-sass": "^4.7.2",
+    "nodemon": "^1.11.0",
+    "prettier": "^1.18.2",
+    "sass-loader": "^6.0.6"
   }
 }
