WIP: Using tailwind and building frontend from scratch

--- a/package.json
+++ b/package.json
@@ -5,44 +5,28 @@
   "author": "Paul Schmidt <rookian@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "nuxt",
     "build": "nuxt build",
-    "dev-debug": "node --inspect node_modules/.bin/nuxt",
-    "start": "cross-env NODE_ENV=production node server/index.js",
+    "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.6.0",
-    "@nuxtjs/style-resources": "^0.1.2",
-    "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.28",
-    "chart.js": "^2.7.1",
-    "cross-env": "^5.2.0",
-    "express": "^4.17.1",
-    "ionicons": "^2.0.1",
-    "line-awesome": "github:icons8/line-awesome",
-    "lodash": "^4.17.15",
-    "nuxt": "^2.9.1",
+    "@nuxtjs/axios": "^5.8.0",
+    "nuxt": "^2.10.2",
     "nuxt-webfontloader": "^1.1.0",
-    "themify-icons": "^1.0.0",
-    "uuid": "^3.3.3",
-    "vue": "^2.6.10",
-    "vue-chartjs": "^3.1.1",
     "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.6",
-    "eslint": "^4.19.1",
-    "eslint-config-prettier": "^6.1.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^2.2.1",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-vue": "^4.7.1",
-    "node-sass": "^4.12.0",
-    "nodemon": "^1.19.1",
+    "@nuxtjs/eslint-config": "^1.1.2",
+    "@nuxtjs/eslint-module": "^1.1.0",
+    "@nuxtjs/tailwindcss": "^1.2.0",
+    "eslint-plugin-nuxt": ">=0.4.2",
+    "babel-eslint": "^10.0.3",
+    "eslint": "6.6.0",
     "prettier": "^1.18.2",
-    "sass-loader": "^6.0.6"
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-prettier": "^3.1.1"
   }
 }
