--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "@nuxtjs/eslint-config": "^1.1.2",
     "@nuxtjs/eslint-module": "^1.1.0",
     "@nuxtjs/tailwindcss": "^1.2.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
     "babel-eslint": "^10.0.3",
     "eslint": "6.6.0",
-    "prettier": "^1.18.2",
     "eslint-config-prettier": "^6.5.0",
-    "eslint-plugin-prettier": "^3.1.1"
+    "eslint-plugin-nuxt": ">=0.4.2",
+    "eslint-plugin-prettier": "^3.1.1",
+    "prettier": "^1.18.2"
   }
 }
