--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.8.0",
+    "@types/vue-the-mask": "^0.11.0",
     "nuxt": "^2.10.2",
     "nuxt-webfontloader": "^1.1.0",
     "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
+    "@nuxt/typescript-build": "^0.3.4",
     "@nuxtjs/eslint-config": "^1.1.2",
+    "@nuxtjs/eslint-config-typescript": "^0.1.3",
     "@nuxtjs/eslint-module": "^1.1.0",
     "@nuxtjs/tailwindcss": "^1.2.0",
     "babel-eslint": "^10.0.3",
@@ -27,6 +30,7 @@
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.1",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "vue-property-decorator": "^8.3.0"
   }
 }
