--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.8.0",
-    "@types/vue-the-mask": "^0.11.0",
+    "consola": "^2.11.0",
     "nuxt": "^2.10.2",
-    "nuxt-webfontloader": "^1.1.0",
     "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
@@ -25,6 +24,7 @@
     "@nuxtjs/eslint-config-typescript": "^0.1.3",
     "@nuxtjs/eslint-module": "^1.1.0",
     "@nuxtjs/tailwindcss": "^1.2.0",
+    "@types/vue-the-mask": "^0.11.0",
     "babel-eslint": "^10.0.3",
     "eslint": "6.6.0",
     "eslint-config-prettier": "^6.5.0",
