--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "dom"
     ],
     "esModuleInterop": true,
+    "experimentalDecorators": true,
     "allowJs": true,
     "sourceMap": true,
     "strict": true,
@@ -25,6 +26,7 @@
     "types": [
       "@types/node",
       "@types/vue-the-mask",
+      "@nuxt/axios",
       "@nuxt/types"
     ]
   },
