--- a/package.json
+++ b/package.json
@@ -13,24 +13,27 @@
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.8.0",
+    "@nuxtjs/axios": "^5.9.5",
     "consola": "^2.11.0",
-    "nuxt": "^2.10.2",
+    "nuxt": "^2.11.0",
+    "vue-clickaway": "^2.2.2",
     "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "^0.3.4",
+    "@nuxt/typescript-build": "^0.6.0",
     "@nuxtjs/eslint-config": "^1.1.2",
     "@nuxtjs/eslint-config-typescript": "^0.1.3",
     "@nuxtjs/eslint-module": "^1.1.0",
     "@nuxtjs/tailwindcss": "^1.2.0",
     "@types/vue-the-mask": "^0.11.0",
+    "@types/vue-clickaway": "^2.2.0",
     "babel-eslint": "^10.0.3",
     "eslint": "6.6.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.1",
+    "loglevel": "^1.6.7",
     "prettier": "^1.18.2",
-    "vue-property-decorator": "^8.3.0"
+    "vue-property-decorator": "^8.4.0"
   }
 }
