--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "consola": "^2.11.0",
     "nuxt": "^2.11.0",
     "vue-clickaway": "^2.2.2",
-    "vue-the-mask": "^0.11.1"
+    "vue-the-mask": "^0.11.1",
+    "vuelidate": "^0.7.5"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.6.0",
@@ -25,8 +26,9 @@
     "@nuxtjs/eslint-config-typescript": "^0.1.3",
     "@nuxtjs/eslint-module": "^1.1.0",
     "@nuxtjs/tailwindcss": "^1.2.0",
-    "@types/vue-the-mask": "^0.11.0",
     "@types/vue-clickaway": "^2.2.0",
+    "@types/vue-the-mask": "^0.11.0",
+    "@types/vuelidate": "^0.7.11",
     "babel-eslint": "^10.0.3",
     "eslint": "6.6.0",
     "eslint-config-prettier": "^6.5.0",
