--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/axios": "^5.9.5",
     "consola": "^2.11.0",
     "nuxt": "^2.11.0",
+    "nuxt-i18n": "^6.8.1",
     "vue-clickaway": "^2.2.2",
     "vue-the-mask": "^0.11.1",
     "vuelidate": "^0.7.5"
