--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
       "@types/node",
       "@types/vue-the-mask",
       "@nuxt/axios",
-      "@nuxt/types"
+      "@nuxt/types",
+      "nuxt-i18n"
     ]
   },
   "exclude": [
