--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.9.5",
+    "@vue/composition-api": "^0.5.0",
     "consola": "^2.11.0",
     "nuxt": "^2.11.0",
     "nuxt-i18n": "^6.8.1",
+    "shortid": "^2.2.15",
     "vue-clickaway": "^2.2.2",
     "vue-the-mask": "^0.11.1",
     "vuelidate": "^0.7.5"
@@ -27,6 +29,7 @@
     "@nuxtjs/eslint-config-typescript": "^0.1.3",
     "@nuxtjs/eslint-module": "^1.1.0",
     "@nuxtjs/tailwindcss": "^1.2.0",
+    "@types/shortid": "0.0.29",
     "@types/vue-clickaway": "^2.2.0",
     "@types/vue-the-mask": "^0.11.0",
     "@types/vuelidate": "^0.7.11",
