--- a/package.json
+++ b/package.json
@@ -13,33 +13,35 @@
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.9.5",
-    "@vue/composition-api": "^0.5.0",
-    "consola": "^2.11.0",
-    "nuxt": "^2.11.0",
-    "nuxt-i18n": "^6.8.1",
+    "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/composition-api": "^0.12.3",
+    "@vue/composition-api": "^1.0.0-beta.11",
+    "consola": "^2.15.0",
+    "nuxt": "^2.14.4",
+    "nuxt-i18n": "^6.13.12",
     "shortid": "^2.2.15",
     "vue-clickaway": "^2.2.2",
     "vue-the-mask": "^0.11.1",
     "vuelidate": "^0.7.5"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "^0.6.0",
-    "@nuxtjs/eslint-config": "^1.1.2",
-    "@nuxtjs/eslint-config-typescript": "^0.1.3",
-    "@nuxtjs/eslint-module": "^1.1.0",
-    "@nuxtjs/tailwindcss": "^1.2.0",
+    "@nuxt/types": "^2.14.4",
+    "@nuxt/typescript-build": "^2.0.2",
+    "@nuxtjs/eslint-config-typescript": "^3.0.0",
+    "@nuxtjs/eslint-module": "^2.0.0",
+    "@nuxtjs/tailwindcss": "^3.0.2",
     "@types/shortid": "0.0.29",
     "@types/vue-clickaway": "^2.2.0",
     "@types/vue-the-mask": "^0.11.0",
-    "@types/vuelidate": "^0.7.11",
+    "@types/vuelidate": "^0.7.13",
     "babel-eslint": "^10.0.3",
-    "eslint": "6.6.0",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-plugin-prettier": "^3.1.1",
-    "loglevel": "^1.6.7",
-    "prettier": "^1.18.2",
-    "vue-property-decorator": "^8.4.0"
+    "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-nuxt": "^1.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "loglevel": "^1.7.0",
+    "prettier": "^2.1.1",
+    "vue-class-component": "^7.2.5",
+    "vue-property-decorator": "^9.0.0"
   }
 }
