--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/composition-api": "^0.19.1",
-    "@vue/composition-api": "^1.0.0-beta.11",
+    "@vue/composition-api": "^1.0.0-rc.1",
     "@vuelidate/core": "^2.0.0-alpha.11",
     "@vuelidate/validators": "^2.0.0-alpha.9",
     "consola": "^2.15.0",
@@ -23,6 +23,7 @@
     "nuxt-i18n": "^6.13.12",
     "shortid": "^2.2.15",
     "vue-clickaway": "^2.2.2",
+    "vue-composable": "^1.0.0-beta.21",
     "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
