--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^5.0.0-4",
+    "@nuxtjs/tailwindcss": "^5.0.3",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
-    "maska": "^1.5.0",
-    "nuxt3": "latest",
-    "prettier": "^2.5.1",
-    "vue-clickaway": "github:crisp-dev/vue-clickaway"
+    "prettier": "^2.5.1"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.1.8",
     "@vuelidate/core": "^2.0.0-alpha.34",
     "@vuelidate/validators": "^2.0.0-alpha.26",
-    "nanoid": "^3.3.1"
+    "maska": "^1.5.0",
+    "nanoid": "^3.3.1",
+    "nuxt": "^3.0.0-rc.1",
+    "pinia": "^2.0.13",
+    "vue-clickaway": "github:crisp-dev/vue-clickaway"
   }
 }
