--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "prettier": "^2.5.1"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.5.0",
+    "@heroicons/vue": "^1.0.6",
     "@pinia/nuxt": "^0.1.8",
     "@vuelidate/core": "^2.0.0-alpha.34",
     "@vuelidate/validators": "^2.0.0-alpha.26",
