--- a/package.json
+++ b/package.json
@@ -6,21 +6,22 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^5.0.3",
-    "eslint": "^8.9.0",
-    "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.5.1"
+    "@nuxtjs/tailwindcss": "^6.6.6",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "^2.8.7"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.5.0",
-    "@heroicons/vue": "^1.0.6",
-    "@pinia/nuxt": "^0.1.8",
-    "@vuelidate/core": "^2.0.0-alpha.34",
-    "@vuelidate/validators": "^2.0.0-alpha.26",
-    "maska": "^1.5.0",
-    "nanoid": "^3.3.1",
-    "nuxt": "^3.0.0-rc.1",
-    "pinia": "^2.0.13",
+    "@headlessui/vue": "^1.7.13",
+    "@heroicons/vue": "^2.0.17",
+    "@pinia/nuxt": "^0.4.8",
+    "@vuelidate/core": "^2.0.2",
+    "@vuelidate/validators": "^2.0.2",
+    "maska": "^2.1.8",
+    "nanoid": "^4.0.2",
+    "nuxt": "^3.4.1",
+    "pinia": "^2.0.34",
     "vue-clickaway": "github:crisp-dev/vue-clickaway"
-  }
+  },
+  "packageManager": "yarn@3.5.0"
 }
